[package]
name = "MMK"
version = "0.1.1"
authors = ["LoanCold <loancold@foxmail.com>", "Haochen Gong <1527198893@qq.com>", "Xiangyu REN"]
edition = "2018"

# The newest versions are described below, but they are not compatible with UltraOS's newest version.
# riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
# virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
# k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
# k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
# k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
spin = "0.7.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
riscv = { git = "https://github.com/rust-embedded/riscv.git"}
# virtio-drivers = { path = "../dependency/virtio-drivers" }
mmi = { version = "0.1.9", git = "https://github.com/MemoryManagementKernel/mmi_rust.git"}
tiny-keccak = { version = "2.0.0", features = ["sha3"] }
# aes-gcm = {path = "../dependency/aes-gcm"}

[features]
board_qemu = []
board_k210 = []
board_nezha = []
